--- a/tasks/config_Debian.yml
+++ b/tasks/config_Debian.yml
@@ -1,5 +1,15 @@
 ---
 
+- name: add network config
+  copy:
+    src: Debian_syslog_000_src_net.conf.j2
+    dest: /etc/syslog-ng/conf.d/000_src_net.conf
+    owner: root
+    group: root
+    mode: "0644"
+  notify:
+    - syslog reload
+
 - name: delete the configuration
   file:
     path: "/etc/syslog-ng/conf.d/{{ syslog_config_name }}.conf"
