Devariabilize the service name and add a regex to identify the progname
The handler of this role can be called by a lot of other roles.
But if the role is not loaded, the distrib dependant service name
variable is not loaded and thus the handler failed. So the service name
must be hardcoded.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,16 +3,11 @@
 - name: syslog restart
   listen: network restart
   service:
-    name: "{{ syslog_service_name }}"
+    name: "{% if ansible_facts['distribution'] == 'OpenBSD' %}syslogd{% else %}syslog-ng{% endif %}"
     state: restarted
-
-- name: syslog reload
-  service:
-    name: "{{ syslog_service_name }}"
-    state: reloaded
 
 - name: syslog reload
   listen: chrooted /dev/log
   service:
-    name: "{{ syslog_service_name }}"
+    name: "{% if ansible_facts['distribution'] == 'OpenBSD' %}syslogd{% else %}syslog-ng{% endif %}"
     state: reloaded
