--- a/tasks/config_Debian.yml
+++ b/tasks/config_Debian.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: create the conf.d dir
+  file:
+    path: /etc/syslog-ng/conf.d
+    owner: root
+    group: root
+    mode: "0755"
+    state: directory
+
 - name: add network config
   template:
     src: Debian_syslog_000_src_net.conf.j2
