--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -2,6 +2,6 @@
 
 - name: add the syslog service to init and start the service
   service:
-    name: "{% if ansible_facts['distribution'] == 'OpenBSD' %}syslogd{% else %}syslog-ng{% endif %}"
+    name: "{{ syslog_service_name }}"
     enabled: True
     state: started
